# GVNR

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
Installers/: build-installer.sh  windows-installer.iss
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DistortionAlgorithms.cpp  DistortionAlgorithms.h  FeedbackDelay.cpp  FeedbackDelay.h  MorphingFilter.cpp  MorphingFilter.h  MultiPolarDistortion.cpp  MultiPolarDistortion.h  MultibandCrossover.cpp  MultibandCrossover.h  Oversampler.cpp  Oversampler.h  SignalChain.cpp  SignalChain.h
Source/GUI/: AdvancedView.cpp  AdvancedView.h  CurveEditor.cpp  CurveEditor.h  DistortionPanel.cpp  DistortionPanel.h  FeedbackPanel.cpp  FeedbackPanel.h  FilterPanel.cpp  FilterPanel.h  GVNRLookAndFeel.cpp  GVNRLookAndFeel.h  KnobComponent.cpp  KnobComponent.h  MainPanel.cpp  MainPanel.h  ModDragSource.cpp  ModDragSource.h  ModulationPanel.cpp  ModulationPanel.h  MultibandPanel.cpp  MultibandPanel.h  PlayView.cpp  PlayView.h  PresetBrowser.cpp  PresetBrowser.h  TooltipOverlay.cpp  TooltipOverlay.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/Modulation/: CurveSequencer.cpp  CurveSequencer.h  EnvelopeFollower.cpp  EnvelopeFollower.h  MacroControl.cpp  MacroControl.h  ModulationMatrix.cpp  ModulationMatrix.h  MorphingLFO.cpp  MorphingLFO.h
Source/Presets/: FactoryPresets.h  PresetManager.cpp  PresetManager.h
Source/Utility/: MIDIProcessor.cpp  MIDIProcessor.h  Parameters.h  PitchSnap.cpp  PitchSnap.h
